# DebugTracer

./: .gitignore  README.md  example_usage.py  pyproject.toml
.github/workflows/: python-package.yml
debugtracer/: __init__.py  tracer.py
debugtracer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_tracer.py
