[project]
name = "debugtracer"
version = "0.1.0"
description = "A lightweight, generic debug tracer for Python projects."
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
